made adjustments to home page and sign in pages

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -12,8 +12,9 @@ body {
 
 .banner-text {
   // border: 1px solid black;
-  border-radius: 10px;
-  background: #FDD166;
+  border-radius: 4px;
+  background: white;
+  opacity: .9;
   padding: 20px 40px;
   width: 500px;
   position: absolute;
@@ -48,7 +49,7 @@ body {
   // borders are for testing purpose
   background: white;
   box-shadow: 0 0 20px -5px #333;
-  border-radius: 50px;
+  border-radius: 7px;
   padding: 50px;
 }
 
