--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,6 @@
 <div class="homepage-banner" style="background-image: url('<%= cl_image_path 'home-updated' %>')">
-    <div class="banner-text">
-        <h3>Working hard to become a better parent?</h3>
-        <h5>When your children are blah blah blah annoyed, distracted, bored, unwilling to complete their tasks, we've got you covered blah blah. Help your child to become a better being.</h5>
+    <div class="banner-text" style="font-family: 'Fjalla One', sans-serif;">
+        <h3>Human Beans is the best way to get kids to <i>want</i> to do chores and makes chores easy to manage for grown-ups! </h3>
         <div class="btn-get-started">
         <%= link_to new_parent_registration_path do %>
         <h5>Get Started <%= icon('fas', 'chevron-right') %> </h5>
@@ -18,7 +17,7 @@
                 </div>
                 <div class="col-xs-12 col-sm-6">
                     <div class="text-card">
-                        <h5>Team up and share the work with your children.</h5>
+                        <h4>Help children develop better habits through positive reinforcement without punishment</h4>
                     </div>
                 </div>
             </div>
@@ -28,7 +27,7 @@
             <div class="img-text-combo">
                 <div class="col-xs-12 col-sm-6">
                     <div class="text-card">
-                        <h5>Get the job done and have more time to yourself.</h5>
+                        <h4>Kids will want to finish their chores to unlock rewards that they earn.</h4>
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-6">
