--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -4,7 +4,7 @@
     <%= image_tag "bean_open.png" %>
     <% end %>
     <!-- Right Navigation -->
-<div class="tect-center"><strong>Human Beans</strong> </div>
+<div class="text-center" style="font-size: 30px; letter-spacing: 2px;"><strong>Human Beans</strong> </div>
     <div class="navbar-wagon-right hidden-xs hidden-sm">
         <% if parent_signed_in? %>
         <%= link_to 'Dashboard', dashboard_path, class: "navbar-wagon-item navbar-wagon-link" %>
