--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,7 +1,7 @@
 /* Main navbar */
 .navbar-wagon {
   box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
-  background: rgba(251, 232, 230, 0.7);
+  background: white;
   transition: all 0.3s ease;
   height: 60px;
   padding: 0px 30px;
@@ -12,6 +12,7 @@
   position: sticky;
   top: 0;
   z-index: 10;
+  font-family:'Fjalla One', sans-serif;
 }
 
 /* Logo */
