--- a/app/views/parents/_children.html.erb
+++ b/app/views/parents/_children.html.erb
@@ -35,12 +35,12 @@
             </div>
             <% end %>
 
-            <div class="task-group container">
+            <div class="task-group ">
               <div class="row">
                 <% child.tasks.each do |task| %>
-                    <div class="col-sm-3">
+                    <div class="col-sm-3 col-xs-12">
                       <div class="each-task">
-                        <div class="dashboard-task-name">
+                        <div class="dashboard-task-name" data-id="<%= task.id %>">
                          <p><%= task.objective.capitalize %></p>
                          <% task.task_submissions.each do |check| %>
                             <% if check.state == 1 %>
@@ -55,8 +55,8 @@
 
               <div class="row">
                 <% child.tasks.each do |task| %>
-                    <div class="col-sm-6 col-sm-offset-3">
-                      <div class="task-details">
+                    <div class="col-sm-6">
+                      <div class="task-details" data-id="<%= task.id %>">
                         <p><strong>Details:</strong><%= task.key_results %></p>
                         <% if task.task_submissions.any? %>
                           <% task.task_submissions.last(3).each do |submission| %>
@@ -116,12 +116,57 @@
 
     </ul>
 </div>
+
 <script>
-const tasks = document.querySelectorAll(".dashboard-task-name");
-tasks.forEach(task => {
-    task.addEventListener('click', event => {
-        event.target.nextElementSibling.classList.toggle("visible-task-details");
-        event.target.classList.toggle("active-task");
-    })
+// const tasks = document.querySelectorAll(".dashboard-task-name");
+// tasks.forEach(task => {
+//     task.addEventListener('click', event => {
+//         event.target.nextElementSibling.classList.toggle("visible-task-details");
+//         event.target.classList.toggle("active-task");
+//     })
+// })
+
+// let taskDetails = document.getElementsByClassName('task-details');
+
+// console.log(taskDetails)
+
+// let displayBlock = function(i) {
+//     taskDetails[i].style.display = "block";
+// };
+
+
+// for (let i = 0; i < eachTask.length; i++) {
+//     eachTask[i].onclick = function(event) {
+//         displayBlock(Array.from(eachTask).indexOf(event.target))
+//     };
+// }
+
+
+let eachTask = document.querySelectorAll(".dashboard-task-name")
+eachTask.forEach(task => {
+  task.addEventListener('click', event => {
+    const allDetails = document.querySelectorAll(".task-details")
+    allDetails.forEach((detailBox) => {
+      detailBox.classList.remove("show-task");
+    });
+    const taskDetails = document.querySelector(`.task-details[data-id="${event.currentTarget.dataset.id}"]`)
+
+    taskDetails.classList.add("show-task");
+  })
 })
+
+
+
+
+// let closes = document.querySelectorAll(".close")
+
+// let closeModal = function(i) {
+//     modal[i].style.display = "none";
+// };
+
+// for (let i = 0; i < closes.length; i++) {
+//     closes[i].onclick = function(event) {
+//         closeModal(Array.from(closes).indexOf(event.target))
+//     };
+// }
 </script>
