--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -89,3 +89,13 @@
 .show-task {
   display:block;
 }
+
+.dashboard-task-details {
+  display: none;
+  border: 2px solid ;
+  border-radius: 0px 40px 40px 40px;
+  min-width: 700px;
+  padding: 15px;
+  text-align:left;
+
+}
