--- a/app/views/parents/_children.html.erb
+++ b/app/views/parents/_children.html.erb
@@ -56,7 +56,7 @@
               <div class="row">
                 <% child.tasks.each do |task| %>
                     <div class="col-sm-6">
-                      <div class="task-details" data-id="<%= task.id %>">
+                      <div class="dashboard-task-details" data-id="<%= task.id %>">
                         <p><strong>Details:</strong><%= task.key_results %></p>
                         <% if task.task_submissions.any? %>
                           <% task.task_submissions.last(3).each do |submission| %>
@@ -121,12 +121,12 @@
 // const tasks = document.querySelectorAll(".dashboard-task-name");
 // tasks.forEach(task => {
 //     task.addEventListener('click', event => {
-//         event.target.nextElementSibling.classList.toggle("visible-task-details");
+//         event.target.nextElementSibling.classList.toggle("visible-dashboard-task-details");
 //         event.target.classList.toggle("active-task");
 //     })
 // })
 
-// let taskDetails = document.getElementsByClassName('task-details');
+// let taskDetails = document.getElementsByClassName('dashboard-task-details');
 
 // console.log(taskDetails)
 
@@ -145,11 +145,11 @@
 let eachTask = document.querySelectorAll(".dashboard-task-name")
 eachTask.forEach(task => {
   task.addEventListener('click', event => {
-    const allDetails = document.querySelectorAll(".task-details")
+    const allDetails = document.querySelectorAll(".dashboard-task-details")
     allDetails.forEach((detailBox) => {
       detailBox.classList.remove("show-task");
     });
-    const taskDetails = document.querySelector(`.task-details[data-id="${event.currentTarget.dataset.id}"]`)
+    const taskDetails = document.querySelector(`.dashboard-task-details[data-id="${event.currentTarget.dataset.id}"]`)
 
     taskDetails.classList.add("show-task");
   })
