--- a/app/views/parents/_tasks.html.erb
+++ b/app/views/parents/_tasks.html.erb
@@ -1,12 +1,7 @@
-
-<div class='add-feature'>
-
-  <%=cl_image_tag 'list_1',  height: 34, width: 34, class: "dashboard-icon"%>
-  <h3>Tasks</h3>
-  <%=cl_image_tag 'plus', height: 34, width: 34,class: "test btn-add-object" %>
-</div>
+<h3>Tasks: <%=cl_image_tag 'list_1'%></h3>
 <div>
     <!-- Trigger/Open The Modal -->
+    <div class="test btn-add-object">Add Tasks</div>
     <!-- The Modal -->
     <div class="modal">
         <!-- Modal content -->
