--- a/app/views/parents/_add_child.html.erb
+++ b/app/views/parents/_add_child.html.erb
@@ -1,8 +1,5 @@
-<div class='add-feature'>
-  <%=cl_image_tag 'children',  height: 34, width: 34, class: "dashboard-icon"%>
-  <h3>Child:</h3>
-  <%=cl_image_tag 'plus', height: 34, width: 34,class: "test btn-add-object" %>
-</div>
+
+    <div class="test btn-add-object">Add Child</div>
     <!-- The Modal -->
     <div class="modal">
 
