--- a/app/views/parents/_children.html.erb
+++ b/app/views/parents/_children.html.erb
@@ -55,8 +55,8 @@
 
               <div class="row">
                 <% child.tasks.each do |task| %>
-                    <div class="col-sm-6">
-                      <div class="dashboard-task-details" data-id="<%= task.id %>">
+                   <!--  <div class="col-sm-6"> -->
+                      <div class="task-details" data-id="<%= task.id %>">
                         <p><strong>Details:</strong><%= task.key_results %></p>
                         <% if task.task_submissions.any? %>
                           <% task.task_submissions.last(3).each do |submission| %>
@@ -100,7 +100,7 @@
                           <% end %>
                         <% end %>
                       </div>
-                    </div>
+                    <!-- </div> -->
                 <% end %>
               </div>
 
@@ -117,56 +117,3 @@
     </ul>
 </div>
 
-<script>
-// const tasks = document.querySelectorAll(".dashboard-task-name");
-// tasks.forEach(task => {
-//     task.addEventListener('click', event => {
-//         event.target.nextElementSibling.classList.toggle("visible-dashboard-task-details");
-//         event.target.classList.toggle("active-task");
-//     })
-// })
-
-// let taskDetails = document.getElementsByClassName('dashboard-task-details');
-
-// console.log(taskDetails)
-
-// let displayBlock = function(i) {
-//     taskDetails[i].style.display = "block";
-// };
-
-
-// for (let i = 0; i < eachTask.length; i++) {
-//     eachTask[i].onclick = function(event) {
-//         displayBlock(Array.from(eachTask).indexOf(event.target))
-//     };
-// }
-
-
-let eachTask = document.querySelectorAll(".dashboard-task-name")
-eachTask.forEach(task => {
-  task.addEventListener('click', event => {
-    const allDetails = document.querySelectorAll(".dashboard-task-details")
-    allDetails.forEach((detailBox) => {
-      detailBox.classList.remove("show-task");
-    });
-    const taskDetails = document.querySelector(`.dashboard-task-details[data-id="${event.currentTarget.dataset.id}"]`)
-
-    taskDetails.classList.add("show-task");
-  })
-})
-
-
-
-
-// let closes = document.querySelectorAll(".close")
-
-// let closeModal = function(i) {
-//     modal[i].style.display = "none";
-// };
-
-// for (let i = 0; i < closes.length; i++) {
-//     closes[i].onclick = function(event) {
-//         closeModal(Array.from(closes).indexOf(event.target))
-//     };
-// }
-</script>
