--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -14,38 +14,50 @@
 .child-wishlist,
 .submission-details {
     margin: 10px;
-    padding: 10px 20px;
+
 }
 
 .submission-details {
-  box-shadow: 1px 1px 10px #888888;
-  width: 600px;
-  height: 400px;
+  width: 500px;
+  height: 300px;
+  text-align:right;
 
 }
 
 .child-wishlist {
-    background: yellow;
     display: flex;
 }
 
+.task-group {
+  // display:flex;
+
+}
+
+
 .each-task {
   border-radius: 5px;
+  // display:flex;
+  // flex-direction:column;
 }
 
 .dashboard-task-name {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
   padding: 10px;
-  width: 250px;
+  min-width: 100px;
   transition: ease-in-out 250ms;
-  border-radius: 10px;
   background-color:rgb(253, 208, 102);
   color:white;
   font-weight:bold;
-   box-shadow: 3px 3px 3px #888888;
+  box-shadow: 1px 1px 1px #888888;
   margin:10px;
   &:hover {
     cursor: pointer;
     opacity: 0.8;
+  }
+  p {
+    margin-bottom: 0
   }
 }
 
@@ -59,4 +71,21 @@
     padding:10px;
     font-weight:bold;
   }
+}
+
+.add-feature {
+  display:flex;
+  align-items:center;
+  margin: 25px 0px;
+  h3 {
+    margin: 0
+  }
+}
+
+.dashboard-icon {
+  margin: 0 10px;
+}
+
+.show-task {
+  display:block;
 }
