--- a/app/views/parents/_children.html.erb
+++ b/app/views/parents/_children.html.erb
@@ -1,6 +1,4 @@
-
-<div class="children-banner"> <h3>The <%= current_parent.name %> Family</h3></div>
-<div class="childrens-list">
+  <div class="childrens-list">
     <ul style="list-style: none;">
         <% current_parent.children.each do |child| %>
         <li class="each-child">
@@ -14,85 +12,162 @@
                     <% if reward.reward_requests.any? %>
                       <% req = reward.reward_requests.last %>
                     <!------------- AJAX reward request ---------->
-                              <% if req.state == 0 %>
-<div id="<%= child.name.strip %>-<%= req.reward.name.strip.split.join %>-actions">
-<span>
-    <%= link_to reward_reward_request_path(req.reward, req, approved: true),
-    remote: true, method: :patch do %><%= icon('fas', 'check') %>Grant<% end %>
-  </span>
-  <span>
-    <%= link_to reward_reward_request_path(req.reward, req, approved: false),
-    remote: true, method: :patch do %><%= icon('fas', 'times') %> Say No<% end %>
-  </span>
-</div>
-                              <% else %>
-                              <div id="request-state">
-                              <%= req.state > 0 ? "(Granted)" : "(Rejected)" %>
-                              </div>
-                              <% end %>
+                      <% if req.state == 0 %>
+                        <div id="<%= req.reward.name.strip.split.join %>-actions">
+                        <span>
+                            <%= link_to reward_reward_request_path(req.reward, req, approved: true),
+                            remote: true, method: :patch do %><%= icon('fas', 'check') %>Grant<% end %>
+                          </span>
+                          <span>
+                            <%= link_to reward_reward_request_path(req.reward, req, approved: false),
+                            remote: true, method: :patch do %><%= icon('fas', 'times') %> Say No<% end %>
+                          </span>
+                        </div>
+                      <% else %>
+                        <div id="request-state">
+                        <%= req.state > 0 ? "(Granted)" : "(Rejected)" %>
+                        </div>
+                      <% end %>
+
                     <!------------------------------------------>
                     <% end %>
                     </div>
                     <% end %>
             </div>
             <% end %>
-            <% child.tasks.each do |task| %>
-            <div class="each-task" style="text-align: center;">
-              <div class="dashboard-task-name">
-               <%= task.objective.capitalize %>
-                </div>
-                <div class="task-details">
-                   <p><%= task.key_results %></p>
-                </div>
-                <% if task.task_submissions.any? %>
-                <% task.task_submissions.last(3).each do |submission| %>
-                <div>
-                    <!------------- AJAX task submission ---------->
 
-                        <% if submission.state == 0 %>
-                        <div id="<%= task.objective.strip.split.join %>submission-actions">
-                        <span>
-                                    <%= link_to task_task_submission_path(task, submission, approved: true), remote: true, method: :patch do %>
-                                    <%= icon('fas', 'check') %> Approve
-                                    <% end %></span>
-                        <span>
-                                      <%= link_to task_task_submission_path(task, submission, approved: false), remote: true, method: :patch do %>
-                                      <%= icon('fas', 'times') %> Disapprove
-                                      <% end %></span>
+            <div class="task-group ">
+              <div class="row">
+                <% child.tasks.each do |task| %>
+                    <div class="col-sm-3 col-xs-12">
+                      <div class="each-task">
+                        <div class="dashboard-task-name" data-id="<%= task.id %>">
+                         <p><%= task.objective.capitalize %></p>
+                         <% task.task_submissions.each do |check| %>
+                            <% if check.state == 1 %>
+                                <%= cl_image_tag 'checked_2' %>
+                            <%end %>
+                         <%end %>
                         </div>
-                        <% else %>
-                        <div id="submission-state" style="margin-right: 80px;">
-                          <% if submission.state > 0  %>
-                            <%= cl_image_tag 'checked_2' %> Approved!
-                            <% else %>
-                            <%= cl_image_tag 'error_2' %> Rejected!
-                            <% end %>
-                        </div>
-                        <% end %>
-                    <!------------------------------------------>
-                    <div class="submission-details">
-                        Message:<p>
-                            <%= submission.comment %>
-                        </p>
-                        <% unless submission.photo.to_s.empty? %>
-                        <%= cl_image_tag submission.photo, height: 200, width: 300, crop: :fill %>
-                        <% end %>
+                      </div>
                     </div>
-                </div>
                 <% end %>
+              </div>
+
+              <div class="row">
+                <% child.tasks.each do |task| %>
+                    <div class="col-sm-6">
+                      <div class="task-details" data-id="<%= task.id %>">
+                        <p><strong>Details:</strong><%= task.key_results %></p>
+                        <% if task.task_submissions.any? %>
+                          <% task.task_submissions.last(3).each do |submission| %>
+                            <div>
+                              <!------------- AJAX task submission ---------->
+
+                                  <% if submission.state == 0 %>
+                                    <div id="<%= task.objective.strip.split.join %>submission-actions">
+                                      <span>
+                                                  <%= link_to task_task_submission_path(task, submission, approved: true), remote: true, method: :patch do %>
+                                                  <%= icon('fas', 'check') %> Approve
+                                                  <% end %>
+
+                                      </span>
+                                      <span>
+                                                    <%= link_to task_task_submission_path(task, submission, approved: false), remote: true, method: :patch do %>
+                                                    <%= icon('fas', 'times') %> Disapprove
+                                                    <% end %>
+
+                                      </span>
+                                    </div>
+                                  <% else %>
+                                <!--   <div id="submission-state"> -->
+                                    <%# if submission.state > 0  %>
+                                      <%#= cl_image_tag 'checked_2' Approved%>
+                                      <%# else %>
+                                      <%#= cl_image_tag 'error_2' Rejected!%>
+                                      <%# end %>
+                                 <!--  </div> -->
+                                  <% end %>
+                              <!------------------------------------------>
+                                  <div class="submission-details">
+                                      <strong>Message:</strong><p>
+                                          <%= submission.comment %>
+                                      </p>
+                                      <% unless submission.photo.to_s.empty? %>
+                                      <%= cl_image_tag submission.photo, height: 200, width: 300, crop: :fill %>
+                                      <% end %>
+                                  </div>
+                            </div>
+                          <% end %>
+                        <% end %>
+                      </div>
+                    </div>
                 <% end %>
-                <% end %>
+              </div>
+
+
+
+
+
+
             </div>
+
         </li>
         <% end %>
+
     </ul>
 </div>
+
 <script>
-const tasks = document.querySelectorAll(".dashboard-task-name");
-tasks.forEach(task => {
-    task.addEventListener('click', event => {
-        event.target.nextElementSibling.classList.toggle("visible-task-details");
-        event.target.classList.toggle("active-task");
-    })
+// const tasks = document.querySelectorAll(".dashboard-task-name");
+// tasks.forEach(task => {
+//     task.addEventListener('click', event => {
+//         event.target.nextElementSibling.classList.toggle("visible-task-details");
+//         event.target.classList.toggle("active-task");
+//     })
+// })
+
+// let taskDetails = document.getElementsByClassName('task-details');
+
+// console.log(taskDetails)
+
+// let displayBlock = function(i) {
+//     taskDetails[i].style.display = "block";
+// };
+
+
+// for (let i = 0; i < eachTask.length; i++) {
+//     eachTask[i].onclick = function(event) {
+//         displayBlock(Array.from(eachTask).indexOf(event.target))
+//     };
+// }
+
+
+let eachTask = document.querySelectorAll(".dashboard-task-name")
+eachTask.forEach(task => {
+  task.addEventListener('click', event => {
+    const allDetails = document.querySelectorAll(".task-details")
+    allDetails.forEach((detailBox) => {
+      detailBox.classList.remove("show-task");
+    });
+    const taskDetails = document.querySelector(`.task-details[data-id="${event.currentTarget.dataset.id}"]`)
+
+    taskDetails.classList.add("show-task");
+  })
 })
+
+
+
+
+// let closes = document.querySelectorAll(".close")
+
+// let closeModal = function(i) {
+//     modal[i].style.display = "none";
+// };
+
+// for (let i = 0; i < closes.length; i++) {
+//     closes[i].onclick = function(event) {
+//         closeModal(Array.from(closes).indexOf(event.target))
+//     };
+// }
 </script>
