--- a/app/views/children/playground.html.erb
+++ b/app/views/children/playground.html.erb
@@ -1,22 +1,3 @@
-<!-- <canvas id="playground-canvas" style="background-image: url('<%#= image_path 'pg' %>');">
-
-  <%#= image_tag 'quest', id: 'btn-quests'; %>
-  <%#= image_tag 'current', id: 'current-position'; %>
-  <%#= image_tag 'pika', id: 'pika'; %>
-  <%#= image_tag 'egg', id: 'egg'; %>
-
-<div class="container">
-    <div class="container text-center">
-        <h2><%#= current_child.name %></h2>
-        <h5><%#= current_child.point %> points</h5>
-    </div>
-    <%#= render 'rewards' %>
-    <hr>
-    <%#= render 'tasks' %>
-</div>
-
-</canvas> -->
-<!-- ####################################################### -->
 <div id="playground-map" style="background-image: url('<%= cl_image_path 'pg' %>');">
     <div>
         <div class="todays-quests">
@@ -31,15 +12,15 @@
         </div>
             <div id="pikachu" class="btn-catch-pika"><%= cl_image_tag 'pika' %></div>
             <div id="pos-1" class="pos-current"> <%= cl_image_tag 'current' if current_child.task_submissions.blank? || current_child.completed_tasks == 0 %> </div>
-           <!--  <div id="pos-2"></div> -->
-            <div id="pos-3"><%= cl_image_tag 'current' if current_child.completed_tasks == 1 %></div>
-            <!-- <div id="pos-4"></div> -->
-            <div id="pos-5"><%= cl_image_tag 'current' if current_child.completed_tasks == 2 %></div>
-            <!-- <div id="pos-6"></div> -->
-            <div id="pos-7"><%= cl_image_tag 'current' if current_child.completed_tasks == 3 %></div>
-           <!--  <div id="pos-8"></div>
-            <div id="pos-9"></div> -->
-            <div id="pos-10"><%= cl_image_tag 'current' if current_child.completed_tasks == 4 %></div>
+            <div id="pos-2"><%= cl_image_tag 'current' if current_child.progress == 2.fdiv(10) %></div>
+            <div id="pos-3"><%= cl_image_tag 'current' if current_child.progress == 3.fdiv(10) %></div>
+            <div id="pos-4"><%= cl_image_tag 'current' if current_child.progress == 4.fdiv(10) %></div>
+            <div id="pos-5"><%= cl_image_tag 'current' if current_child.progress == 5.fdiv(10) %></div>
+            <div id="pos-6"><%= cl_image_tag 'current' if current_child.progress == 6.fdiv(10) %></div>
+            <div id="pos-7"><%= cl_image_tag 'current' if current_child.progress == 7.fdiv(10) %></div>
+            <div id="pos-8"><%= cl_image_tag 'current' if current_child.progress == 8.fdiv(10) %></div>
+            <div id="pos-9"><%= cl_image_tag 'current' if current_child.progress == 9.fdiv(10) %></div>
+            <div id="pos-10"><%= cl_image_tag 'current' if current_child.progress == 10.fdiv(10) %></div>
 
 
     </div>
@@ -79,33 +60,3 @@ function catchPika() {
 // }
 
 </script>
-
-<!-- <script>
-const canvas = document.getElementById('playground-canvas');
-canvas.width = window.innerWidth;
-canvas.height = window.innerHeight;
-const ctx = canvas.getContext("2d");
-ctx.fillStyle = "rgba(251, 232, 230, 0.8)";
-ctx.fillRect(window.innerWidth - 1000,0,window.innerWidth,window.innerHeight);
-// ctx.beginPath();
-// ctx.arc(495,550,10,0,2*Math.PI);
-// ctx.stroke();
-
-// quest icon at top left corder
-const quests = document.getElementById("btn-quests");
-console.log(quests);
-ctx.drawImage(quests, 30, 30);
-/////
-
-
-const current = document.getElementById("current-position");
-const pika = document.getElementById("pika");
-const egg = document.getElementById("egg");
-//ctx.drawImage(egg, 497, 525);
-ctx.drawImage(pika, 670, 590);
-ctx.drawImage(current, 370, 440);
-
-// child info
-ctx.font = "26px Arial";
-ctx.fillText(<%#= current_child.name %>, 1050, 30)
-</script> -->
