--- a/app/assets/stylesheets/pages/_playground.scss
+++ b/app/assets/stylesheets/pages/_playground.scss
@@ -38,7 +38,6 @@
   max-width: 25%;
   padding: 15px;
   text-align:left;
-
 }
 
 .task-list {
@@ -66,6 +65,15 @@
 
   span.rejected {
     color: red;
+  }
+}
+
+.requests-status-list {
+  display: flex;
+  justify-content: space-between;
+
+  .each-reward {
+    padding: 5px;
   }
 }
 
