--- a/app/views/children/_rewards.html.erb
+++ b/app/views/children/_rewards.html.erb
@@ -1,6 +1,6 @@
 <div class="all-rewards">
   <div class="text-center">
-    <h4><%= cl_image_tag 'yay', height: 50 %> <!-- <strong>Rewards</strong> --></h4>
+
     </div>
     <div class="requests-status-list">
         <% if current_child.done_all_mandatory? %>
@@ -8,20 +8,23 @@
         <div class="each-reward">
           <% if reward.reward_requests.any? %>
               <% if reward.reward_requests.last.state == 0 %>
-                <%= reward.name %>
-                <span class="pending">--- pending</span>
+                <%#= reward.name %>
+                <%= cl_image_tag "#{reward.icon}", height: 50 %>
+                <span class="pending"> pending</span>
 
               <% elsif !reward.claimed %>
 
                 <div id="<%= current_child.name.strip %>-<%= reward.name.strip.split.join %>-request-link">
                   <%= link_to reward_reward_requests_path(reward), remote: true, method: :post do %>
-                  <%= reward.name %>
+                  <%#= reward.name %>
+                  <%= cl_image_tag "#{reward.icon}", height: 50 %>
                   <% end %>
                 </div>
 
               <% else %>
-                <%= reward.name %>
-                <span class="claimed">--- Claimed!</span>
+                <%#= reward.name %>
+                <%= cl_image_tag "#{reward.icon}", height: 50 %>
+                <span class="claimed"> Claimed!</span>
               <% end %>
 
               <div id="<%= current_child.name.strip %>-<%= reward.name.strip.split.join %>-request-state" style="color: #5D5A75;"></div>
@@ -29,7 +32,8 @@
           <% else %> <!-- no reward requests yet -->
               <div id="<%= current_child.name.strip %>-<%= reward.name.strip.split.join %>-request-link">
                   <%= link_to reward_reward_requests_path(reward), remote: true, method: :post do %>
-                      <%= reward.name %>
+                      <%#= reward.name %>
+                      <%= cl_image_tag "#{reward.icon}", height: 50 %>
                   <% end %>
               </div>
 
