--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -2,49 +2,34 @@
     padding: 5px;
 }
 
-.each-child {
-
-}
-
 .each-request {
   border-right: 1px dashed black;
   padding: 10px;
 }
 
-.child-wishlist,
-.submission-details {
-    margin: 10px;
+// .child-wishlist,
+// .submission-details {
+//     margin: 10px;
 
-}
+// }
 
 .task-details {
   display: none;
   border: 2px solid ;
   border-radius: 0px 40px 40px 40px;
-  min-width: 700px;
+  min-width: 600px;
   padding: 15px;
   text-align:left;
   margin-left: 25px;
-}
-
-.submission-details {
-  width: 500px;
-  height: 300px;
-  text-align:right;
-
 }
 
 .child-wishlist {
     display: flex;
 }
 
-.task-group {
-  // display:flex;
-
-}
-
 .active-task {
-  background-color: red;
+  background: rgba(0,0,0, 0.1);
+  border: none;
 }
 
 .each-task {
@@ -58,9 +43,9 @@
   justify-content: space-around;
   align-items: center;
   padding: 10px;
-  max-width: 200px;
-  min-width: 200px;
-  max-height: 150px;
+  // max-width: 200px;
+  min-width: 160px;
+  // max-height: 150px;
   min-height: 100px;
   transition: ease-in-out 250ms;
   border: 1px solid #333;
@@ -91,7 +76,8 @@
 
 .add-feature {
   display:flex;
-  align-items:center;
+  justify-content: space-between;
+  align-items: center;
   margin: 25px 0px;
   h3 {
     margin: 0
@@ -99,10 +85,31 @@
 }
 
 .dashboard-icon {
-  margin: 0 10px;
+  margin: 0 5px;
 }
 
 .show-task {
   display:block;
+}
+
+.dashboard-wrapper {
+  margin: 30px 50px;
+}
+
+.children-info {
+  padding: 30px;
+}
+
+.each-child {
+  margin-bottom: 50px;
+
+  .child-name {
+    max-width: 200px;
+    margin: 0;
+    padding: 5px 20px;
+    color: #444;
+    border-radius: 15px 15px 0 0;
+    background: rgba(#cdc1ff, 0.7);
+  }
 }
 
