--- a/app/views/parents/_rewards.html.erb
+++ b/app/views/parents/_rewards.html.erb
@@ -1,7 +1,7 @@
 <div class='add-feature'>
-    <%=cl_image_tag 'gift_1', height: 34, width: 34, class: "dashboard-icon"%>
-    <h3> Rewards:</h3>
-    <%=cl_image_tag 'plus', height: 34, width: 34,class: "test btn-add-object dashboard-icon" %>
+    <%= image_tag 'pinwheel', height: 50, width: 50, class: "dashboard-icon"%>
+    <h4> Reward</h4>
+    <%= image_tag 'plus', height: 30, width: 30,class: "test btn-add-object" %>
 </div>
 <div>
     <!-- The Modal -->
@@ -16,18 +16,19 @@
             <%= f.input :price , label: 'Points needed'%>
             <%= f.input :child_id, collection: @list , label_method: :second, value_method: :first %>
             <%= f.input :daily %>
-            <%= f.button :button, type: :submit %>
+            <%= f.submit 'Add Reward', class: 'btn btn-default'%>
             <% end %>
         </div>
     </div>
     <hr>
     <!----------- Children's rewards list -------------->
-    <h4>Goals!  <%=cl_image_tag 'wishlist'%></h4>
+    <h4> Goals <%= image_tag 'party', height: 30 %></h4>
     <div>
         <% current_parent.children.each do |child| %>
         <div style="font-weight: bold; font-size: 20px;">
             <%= child.name %>
         </div>
+        <!-- Displaying each child's longterm rewards -->
         <% child.rewards.reject(&:daily).each do |r| %>
         <h5> - <%= r.name %></h5>
         <% end %>
