--- a/app/views/parents/_tasks.html.erb
+++ b/app/views/parents/_tasks.html.erb
@@ -1,9 +1,9 @@
 
 <div class='add-feature'>
 
-  <%=cl_image_tag 'list_1',  height: 34, width: 34, class: "dashboard-icon"%>
-  <h3>Tasks</h3>
-  <%=cl_image_tag 'plus', height: 34, width: 34,class: "test btn-add-object" %>
+  <%= image_tag 'watering-can',  height: 50, width: 50, class: "dashboard-icon"%>
+  <h4>Task</h4>
+  <%= image_tag 'plus', height: 30, width: 30,class: "test btn-add-object" %>
 </div>
 <div>
     <!-- Trigger/Open The Modal -->
@@ -18,11 +18,11 @@
             <%= f.input :photo %>
             <%= f.input :photo_cache, as: :hidden %>
             <% @list = current_parent.children.map do |child| %>
-            <% [child.id, child.email] %>
+            <% [child.id, child.name] %>
             <% end %>
-            <%= f.input :child_id, collection: @list , label_method: :second, value_method: :first %>
+            <%= f.input :child_id, collection: @list, label_method: :second, value_method: :first %>
             <%= f.input :mandatory %>
-            <%= f.submit 'Add Task' %>
+            <%= f.submit 'Assign Task', class: 'btn btn-default' %>
             <% end %>
         </div>
     </div>
