--- a/app/views/parents/dashboard.html.erb
+++ b/app/views/parents/dashboard.html.erb
@@ -2,27 +2,33 @@
 <!-- add child button, children list with status -->
 <!-- create task button, mandatory tasks list -->
 <!-- create reward button, daily rewards list  -->
-<div class="dashboard-wrapper" style='background-color: rgb(243, 247, 246) height:100vh;'>
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12 col-md-3" >
+<div class="dashboard-wrapper">
+    <div class="row">
+        <div class="welcome-col">
+            <div class="col-xs-12 col-md-3">
                 <h2>Welcome!</h2>
-                <p>(<%= current_parent.email %>)</p>
-                <div><%= render 'add_child', child: @child %></div>
-                <div><%= render 'tasks' %></div>
-                <div><%= render 'rewards' %></div>
-            </div>
-            <div class="children-info">
-                <div class="col-xs-12 col-md-9" >
-                    <%= render 'children' %>
+                <p>(
+                    <%= current_parent.email %>)</p>
+                <div>
+                    <%= render 'add_child', child: @child %>
                 </div>
+                <div>
+                    <%= render 'tasks' %>
+                </div>
+                <div>
+                    <%= render 'rewards' %>
+                </div>
+            </div>
+        </div>
+        <div class="children-info">
+            <div class="col-xs-12 col-md-9">
+                <%= render 'children' %>
             </div>
         </div>
     </div>
 </div>
 <!------------------------------------------->
 <script>
-
 // Get the button that opens the modal
 // let btn = document.getElementById("btn-task-modal");
 
