--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar-wagon">
     <!-- Logo -->
     <%= link_to root_path, class: "site-logo" do %>
-    <%= image_tag "bean_open.png" %>
+    <%= cl_image_tag "bean_open.png" %>
     <% end %>
     <!-- Right Navigation -->
 <div class="text-center" style="font-size: 30px; letter-spacing: 2px;"><strong>Human Beans</strong> </div>
