--- a/app/assets/stylesheets/pages/_modal.scss
+++ b/app/assets/stylesheets/pages/_modal.scss
@@ -15,11 +15,15 @@
 /* Modal Content/Box */
 .modal-content {
     background-color: #fefefe;
-    margin: 15% auto; /* 15% from the top and centered */
-    padding: 20px;
+    margin: 10% auto; /* 15% from the top and centered */
+    padding: 30px;
+    border-radius: 5px;
     border: 1px solid #888;
-    width: 40%; /* Could be more or less, depending on screen size */
+    width: 30%; /* Could be more or less, depending on screen size */
     height: auto;
+    button {
+      text-align: center;
+    }
 }
 
 /* The Close Button */
