--- a/app/views/parents/_add_child.html.erb
+++ b/app/views/parents/_add_child.html.erb
@@ -20,7 +20,9 @@
                 required: true,
                 hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
                 input_html: { autocomplete: "new-password" } %>
-            <%= f.submit "Add Child", class: 'btn btn-default' %>
+            <div class="text-center ">
+            <%= f.submit "Add Child", class: 'btn btn-warning' %>
+            </div>
             <% end %>
         </div>
     </div>
