--- a/app/views/parents/_children.html.erb
+++ b/app/views/parents/_children.html.erb
@@ -1,7 +1,7 @@
-<div class="childrens-list">
+
     <% current_parent.children.each do |child| %>
     <div class="each-child">
-        <h3 class="child-name"><%= child.name %></h3>
+        <h4 class="child-name"><%= child.name %></h4>
         <% if child.rewards.any? %> <!-- no wishlist display if no reward -->
         <h5>Wishlist:</h5>
         <div class="child-wishlist">
@@ -40,33 +40,37 @@
 
         <div class="task-group">
             <div class="row">
-                <% child.tasks.each do |task| %>
-                <div class="col-sm-3 col-xs-6">
-                    <div class="each-task">
-                        <div class="dashboard-task-name" data-id="<%= task.id %>">
-                            <p>
-                                <%= task.objective.capitalize %>
-                            </p>
-                            <!-- indication of lask task submission state -->
-                            <!-- change to colored border later!!! -->
-                            <% unless task.task_submissions.blank? %>
+              <% if child.tasks.any? %>
+                  <% child.tasks.each do |task| %>
+                      <div class="col-sm-3 col-xs-6 each-task">
 
-                                <% if task.task_submissions.last.state == 1 %>
-                                  <%= icon('fas', 'check') %>
-                                  <%#= cl_image_tag 'checked_2' %>
-                                <% elsif task.task_submissions.last.state == 0 %>
-                                  <%= icon('fas', 'hourglass-start') %>
-                                <%#= cl_image_tag 'hourglass', height:32, width:32 %>
-                                <% else %>
-                                  <%= icon('fas', 'times') %>
-                                  <%#= cl_image_tag 'error_2' %>
-                                <%end %>
-                            <%end %>
-                            <!-- end of indication -->
-                        </div>
-                    </div>
-                </div>
-                <% end %>
+                          <div class="dashboard-task-name" data-id="<%= task.id %>">
+                              <p>
+                                  <%= task.objective.capitalize %>
+                              </p>
+                              <!-- indication of lask task submission state -->
+                              <!-- change to colored border later!!! -->
+                              <% unless task.task_submissions.blank? %>
+
+                                  <% if task.task_submissions.last.state == 1 %>
+                                    <%= icon('fas', 'check') %>
+                                    <%#= cl_image_tag 'checked_2' %>
+                                  <% elsif task.task_submissions.last.state == 0 %>
+                                    <%= icon('fas', 'hourglass-start') %>
+                                  <%#= cl_image_tag 'hourglass', height:32, width:32 %>
+                                  <% else %>
+                                    <%= icon('fas', 'times') %>
+                                    <%#= cl_image_tag 'error_2' %>
+                                  <%end %>
+                              <%end %>
+                              <!-- end of indication -->
+                          </div>
+
+                      </div>
+                  <% end %>
+              <% else %>
+                  <div class="container"><h5>No tasks yet! </h5></div>
+              <% end %>
             </div>
             <div class="row">
                 <% child.tasks.each do |task| %>
@@ -123,4 +127,3 @@
         </div>
     </div>
     <% end %>
-</div>
